--- a/index.html
+++ b/index.html
@@ -128,7 +128,12 @@
        <br>
 	   <div class="row text-center">
           <br>
-		   <div id="Self-Intro" class="col-lg-12"><strong><em>Mình chẳng có một cái kế hoạch nào cả, sau quá nhiều chuyện dẫn mình đến Hà Nội, nói cho bạn biết để đừng kỳ vọng mình nhiều quá lại thất vọng thôi. Vẫn đang học cách cho đi đừng giữ lại, sống chấp nhận bất kỳ, đến bất cứ nơi nào cần phải đến, học bất cứ bài học nào cần phải học, gặp bất cứ ai cần phải gặp, làm bất cứ điều gì cần phải làm nếu có cơ hội. Và vẫn phải học đi học lại bằng sự đau khổ nếu học mà cứ trả chữ lại, sống vì bản thân mà hạ thấp quyền lợi người khác, thích nhận về hơn là cho đi, tính toán với người mình yêu thương, chạy theo tiền tài, danh vọng mà bỏ quên sức khỏe tinh thần.</em></strong></div>
+		   <div id="Self-Intro" class="col-lg-12"><strong><em>
+			   Mình chẳng có một cái kế hoạch nào cả, sau quá nhiều chuyện dẫn mình đến Hà Nội, nói cho bạn biết để đừng kỳ vọng mình nhiều quá lại thất vọng thôi. <br><br>
+			   Đôi khi thật khó để hiểu được những bài học mà người lớn nào cũng muốn con nít học, kiểu như học cách cho đi đừng giữ lại, sống chấp nhận bất kỳ, đến bất cứ nơi nào cần phải đến, học bất cứ bài học nào cần phải học, gặp bất cứ ai cần phải gặp, làm bất cứ điều gì cần phải làm nếu có cơ hội. Và sự thật là mình vẫn phải học đi học lại bằng sự đau khổ nếu học rồi mà cứ trả chữ lại cho đời. <br><br>
+			   Bằng một cách nào đó, mình quan tâm nhiều đến giáo dục và môi trường. Gần đây mình dành nhiều thời gian hơn cho sức khỏe tinh thần sau vài đợt trở bệnh khi sống một mình ở Hà Nội. <br><br>
+			   Bài học tiếp theo, dưới dạng một câu hỏi cần mình giải là "Nếu mình không tự thương mình thì ai thương mình đây?" Bạn trả lời giúp mình nhé!
+		   </em></strong></div>
        </div>
 
        <br>
@@ -159,7 +164,7 @@
                    						<h4 class="card-title">Nhà Thờ Đức Bà</h4>
                    						<p class="card-text">Chốn vui chơi bình dân của lứa học sinh sinh viên bao đời là công viên đối diện, sát sạt là Bưu điện thành phố.</p>
                    						<br><br>
-                   						<a href="https://www.tripadvisor.com.vn/Attraction_Review-g293925-d317896-Reviews-Saigon_Notre_Dame_Cathedral-Ho_Chi_Minh_City.html" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://www.tripadvisor.com.vn/Attraction_Review-g293925-d317896-Reviews-Saigon_Notre_Dame_Cathedral-Ho_Chi_Minh_City.html" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -171,7 +176,7 @@
                    						<h4 class="card-title">Khu Hoa Kiều</h4>
                    						<p class="card-text">Nhắc đến Sài Gòn không thể thiếu đi những đóng góp  của cộng đồng người Hoa trong việc gìn giữ văn hóa.</p>
                    						<br><br>
-                   						<a href="https://www.vntrip.vn/cam-nang/pho-nguoi-hoa-sai-gon-75874" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://www.vntrip.vn/cam-nang/pho-nguoi-hoa-sai-gon-75874" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -183,7 +188,7 @@
                    						<h4 class="card-title">Thư Viện Tổng Hợp</h4>
                    						<p class="card-text">Chán ngồi cà phê ồn ào để học thì vào thư viện tìm chốn yên ả mà mở cuốn sách ra, ung dung đọc sách</p>
                    						<br><br>
-                   						<a href="https://thuvientphcm.gov.vn/" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://thuvientphcm.gov.vn/" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -201,7 +206,7 @@
                    						<h4 class="card-title">Bưu Điện Trung Tâm Sài Gòn</h4>
                    						<p class="card-text">Bưu Điện Thành Phố ấn tượng với kiến trúc thiết kế mái vòm đặc trưng theo phong cách Châu Âu được giữ.</p>
                    						<br><br>
-                   						<a href="https://justfly.vn/discovery/vietnam/ho-chi-minh-city/buu-dien-sai-gon" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://justfly.vn/discovery/vietnam/ho-chi-minh-city/buu-dien-sai-gon" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -213,7 +218,7 @@
                    						<h4 class="card-title">Chợ Bàn Cờ</h4>
                    						<p class="card-text">Người Sài Gòn giản dị và chân chất, đôi khi còn hơi xuề xòa, mà đã muốn lên đồ thì phải lựa đồ si đẹp rẻ.</p>
                    						<br><br>
-                   						<a href="https://anhchien.vn/do-si-cho-ban-co/" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://anhchien.vn/do-si-cho-ban-co/" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -225,7 +230,7 @@
                    						<h4 class="card-title">Bảo Tàng Phụ Nữ Nam Bộ</h4>
                    						<p class="card-text">Một bảo tàng có đầu tư về chất xám và phản ánh đúng sự phát triển của người phụ nữ Việt Nam qua các thời kỳ.</p>
                    						<br><br>
-                   						<a href="https://vinpearl.com/vi/tham-thu-bao-tang-phu-nu-nam-bo-nha-luu-niem-lon-nhat-trung-tam-sai-gon" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://vinpearl.com/vi/tham-thu-bao-tang-phu-nu-nam-bo-nha-luu-niem-lon-nhat-trung-tam-sai-gon" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -243,7 +248,7 @@
                    						<h4 class="card-title">Phố Đi Bộ Nguyễn Huệ</h4>
                    						<p class="card-text">Tọa lạc ngay trung tâm thành phố với những thú vui thời thượng và nhiều hoạt động văn hóa cho giới trẻ.</p>
                    						<br><br>
-                   						<a href="https://gody.vn/chau-a/viet-nam/ho-chi-minh/pho-di-bo-nguyen-hue" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://gody.vn/chau-a/viet-nam/ho-chi-minh/pho-di-bo-nguyen-hue" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -255,7 +260,7 @@
                    						<h4 class="card-title">Phố Tây Bùi Viện</h4>
                    						<p class="card-text">Ngày xưa Cậu Nhỏ có đi làm bồi bàn kiếm chút tiền Tết ở một nhà hàng có chủ người Hoa trên con đường này.</p>
                    						<br><br>
-                   						<a href="https://tourkyco.vn/quay-tung-pho-di-bo-bui-vien-sieu-hot-o-sai-thanh/" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://tourkyco.vn/quay-tung-pho-di-bo-bui-vien-sieu-hot-o-sai-thanh/" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -267,7 +272,7 @@
                    						<h4 class="card-title">Bảo Tàng Áo Dài</h4>
                    						<p class="card-text">Điểm đến dành cho người muốn tìm hiểu về lịch sử văn hóa thông qua quốc phục Việt Nam, chiếc áo dài.</p>
                    						<br><br>
-                   						<a href="https://kenh14.vn/o-sai-gon-co-mot-bao-tang-dep-nhu-tranh-chi-danh-rieng-de-ton-vinh-ao-dai-20171118223012454.chn" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://kenh14.vn/o-sai-gon-co-mot-bao-tang-dep-nhu-tranh-chi-danh-rieng-de-ton-vinh-ao-dai-20171118223012454.chn" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -313,7 +318,7 @@
                    						<h4 class="card-title">Chùa Một Cột</h4>
                    						<p class="card-text">Là một điện thờ với kiến trúc đặt trên một cột trụ duy nhất nên trở thành điểm thu hút du khách. Chùa Một Cột có tên ban đầu là Liên Hoa Đài có tức là Đài Hoa Sen.</p>
                    						<br><br>
-                   						<a href="https://mytour.vn/location/8435-chua-mot-cot-bieu-tuong-van-hoa-viet-nam.html" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://mytour.vn/location/8435-chua-mot-cot-bieu-tuong-van-hoa-viet-nam.html" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -325,7 +330,7 @@
                    						<h4 class="card-title">Hoàng Thành Thăng Long</h4>
                    						<p class="card-text">Quần thể Hoàng thành Thăng Long bắt đầu từ thời kì tiền Thăng Long qua thời Đinh - Tiền Lê, phát triển mạnh dưới thời Lý, Trần, Lê và thành Hà Nội dưới triều Nguyễn.</p>
                    						<br><br>
-                   						<a href="http://dsvh.gov.vn/di-tich-lich-su-va-khao-co-khu-trung-tam-hoang-thanh-thang-long-ha-noi-2945" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="http://dsvh.gov.vn/di-tich-lich-su-va-khao-co-khu-trung-tam-hoang-thanh-thang-long-ha-noi-2945" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -337,7 +342,7 @@
                    						<h4 class="card-title">Nhà Tù Hỏa Lò</h4>
                    						<p class="card-text">Nhà tù Hỏa Lò, xưa có tên tiếng Pháp là Maison Centrale, là một nhà tù cũ nổi tiếng gần đây với giới trẻ do các hoạt động truyền thông của một nhóm bạn trẻ yêu mến.</p>
                    						<br><br>
-                   						<a href="https://kenh14.vn/lam-content-cung-xiu-tren-fanpage-nhung-trai-nghiem-nha-tu-hoa-lo-xong-thi-ai-cung-khoc-hiem-co-mot-noi-tuong-nhu-lanh-leo-lai-chua-nhieu-thu-am-nong-den-vay-2021043009035702.chn" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://kenh14.vn/lam-content-cung-xiu-tren-fanpage-nhung-trai-nghiem-nha-tu-hoa-lo-xong-thi-ai-cung-khoc-hiem-co-mot-noi-tuong-nhu-lanh-leo-lai-chua-nhieu-thu-am-nong-den-vay-2021043009035702.chn" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -354,7 +359,7 @@
                    						<h4 class="card-title">Hồ Hoàn Kiếm</h4>
                    						<p class="card-text">Hồ Hoàn Kiếm còn được gọi là Hồ Gươm là một hồ nước ngọt tự nhiên nằm ở trung tâm thành phố Hà Nội, gắn liền với câu chuyện truyền thuyết Rùa Vàng Trả Gươm.</p>
                    						<br><br>
-                   						<a href="http://dulich24.com.vn/du-lich-quan-hoan-kiem/ho-hoan-kiem-id-6487" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="http://dulich24.com.vn/du-lich-quan-hoan-kiem/ho-hoan-kiem-id-6487" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -366,7 +371,7 @@
                    						<h4 class="card-title">Văn Miếu Quốc Tử Giám</h4>
                    						<p class="card-text">"Hà Nội ngàn năm văn hiến" vậy thì "người Hà Nội ngàn năm văn vở". Phải công nhận là ra đây mới thấy văn hóa học tập thật sự được những gia đình đặc biệt chú trọng.</p>
                    						<br><br>
-                   						<a href="http://vanmieu.gov.vn/en/" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="http://vanmieu.gov.vn/en/" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -378,7 +383,7 @@
                    						<h4 class="card-title">Khu Phố Cổ Hà Nội</h4>
                    						<p class="card-text">Khu Phố Cổ là tên gọi thân thương của một khu vực đô thị có từ lâu đời nằm ở ngoài hoàng thành Thăng Long. Đến Phố Cổ mà không thưởng thức ẩm thực là tiếc lắm!</p>
                    						<br><br>
-                   						<a href="https://www.vntrip.vn/cam-nang/pho-co-ha-noi-12944" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://www.vntrip.vn/cam-nang/pho-co-ha-noi-12944" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -394,7 +399,7 @@
                    						<h4 class="card-title">Hồ Tây</h4>
                    						<p class="card-text">Hồ Tây là một hồ nước tự nhiên lớn nhất ở nội thành thủ đô Hà Nội, yêu sự yên bình sau một ngày làm việc thì chắc chắn không thể bỏ qua ngắm hoàng hôn ở quanh hồ.</p>
                    						<br><br>
-                   						<a href="https://hanoi1000.vn/night/" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://hanoi1000.vn/night/" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -406,7 +411,7 @@
                    						<h4 class="card-title">Nhà Thờ Lớn Hà Nội</h4>
                    						<p class="card-text">Với kiến trúc cổ kính, Nhà Thờ Lớn ở Hà Nội là sự đối đáp với Nhà Thờ Đức Bà ở Sài Gòn, ở đây thường xuyên diễn ra các sinh hoạt tín ngưỡng của các giáo dân Công giáo.</p>
                    						<br><br>
-                   						<a href="https://kenhhomestay.com/nha-tho-lon-ha-noi/" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://kenhhomestay.com/nha-tho-lon-ha-noi/" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -418,7 +423,7 @@
                    						<h4 class="card-title">Thư viện Quốc gia Việt Nam</h4>
                    						<p class="card-text">Sài Gòn có Thư viện Khoa học Tổng hợp thì bắt buộc phải đến Thư Viện Quốc Gia khi đến Hà Nội nếu bạn là một người thích sách hay đơn giản chán ngồi cà phê ồn ào.</p>
                    						<br><br>
-                   						<a href="https://nlv.gov.vn/" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://nlv.gov.vn/" class="btn btn-info" target="_blank" rel="noopener noreferrer">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
