--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
           <br>
 		   <div id="Self-Intro" class="col-lg-12"><strong><em>
 			   Mình chẳng có một cái kế hoạch nào cả, sau quá nhiều chuyện dẫn mình đến Hà Nội, nói cho bạn biết để đừng kỳ vọng mình nhiều quá lại thất vọng thôi. <br><br>
-			   Đôi khi thật khó để hiểu được những bài học mà người lớn nào cũng muốn con nít học, kiểu như học cách cho đi đừng giữ lại, sống chấp nhận bất kỳ, đến bất cứ nơi nào cần phải đến, học bất cứ bài học nào cần phải học, gặp bất cứ ai cần phải gặp, làm bất cứ điều gì cần phải làm nếu có cơ hội. Và sự thật là mình vẫn phải học đi học lại bằng sự đau khổ nếu học rồi mà cứ trả chữ lại cho đời. <br><br>
-			   Bằng một cách nào đó, mình quan tâm nhiều đến giáo dục và môi trường. Gần đây mình dành nhiều thời gian hơn cho sức khỏe tinh thần sau vài đợt trở bệnh khi sống một mình ở Hà Nội. <br><br>
+			   Đôi khi thật khó để hiểu được những bài học mà người lớn nào cũng muốn con nít học, kiểu như học cách cho đi đừng giữ lại, sống chấp nhận bất kỳ, đến bất cứ nơi nào cần phải đến, học bất cứ bài học nào cần phải học, gặp bất cứ ai cần phải gặp, làm bất cứ điều gì cần phải làm nếu có cơ hội. <br><br>
+			   Kỳ lạ là những người lý trí nhất trong xã hội này lại cứ kéo nhau vào toàn thứ kỳ lạ. Một là toàn các cơn nghiện, nghiện công việc, nghiện xem phim, nghiện ăn, nghiện mua sắm, nghiện cà phê và ty tỷ chất kích thích khác. Hai thì những cơn trầm cảm rồi đủ thứ bệnh về tinh thần, bác sỹ tâm lý làm việc cật mặt ra mà người xếp hàng dài dằng dặc. <br><br>
+			   Bằng một cách nào đó, mình quan tâm nhiều đến giáo dục và môi trường. Gần đây mình dành nhiều thời gian hơn cho sức khỏe tinh thần sau vài đợt trở bệnh khi sống một mình ở Hà Nội. Thú vị là rất nhiều lần mình vỡ ra một điều gì đó thật sự quan trọng với bản thân từ những trận tổn thương tinh thần. Có khi lúc mình đau đớn nhất, cái tôi của mình mới chịu hạ xuống để mở ra một bài học mới? <br><br>
 			   Bài học tiếp theo, dưới dạng một câu hỏi cần mình giải là "Nếu mình không tự thương mình thì ai thương mình đây?" Bạn trả lời giúp mình nhé!
 		   </em></strong></div>
        </div>
@@ -527,7 +528,7 @@
 
 <!--		Contact-->
 		<h2 class="text-center display-12">Gõ Cửa đến Cậu Nhỏ</h2>
-	   <p class="lead text-center"><em>Cậu Nhỏ sống hơi khép kín nhưng Sẵn sàng mở lòng với người hữu duyên</em></p>
+	   <p class="lead text-center"><em>Sống hơi khép kín nhưng Sẵn sàng mở lòng với người hữu duyên</em></p>
 	   <br>
 
        <div class="row">
