Update New Button
News Button with the News page

--- a/News.html
+++ b/News.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Việt Nam – Đi Gõ Đầu Trẻ Ở Trường Đồi Có Gì Vui Vậy?</title>
+    <title>Tờ Báo – Trên thế giới xảy ra chuyện gì rồi nhỉ?</title>
   	<link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png">
 	  
 	  <meta name="keywords" 
-         content="Việt Nam Hà Nội Trường Đồi Quốc Oai Spring Hill Academy Dạy Học Giảng Học Sinh Khai Phòng Mô Hình">
+         content="Việt Nam Tin Tức">
 
 	<meta name="description" 
-         content="Trải nghiệm đi dạy học của Cậu Nhỏ trong năm 2020 đến đầu 2021 ở Trường Đồi, Quốc Oai">
+         content="Nơi cập nhật nhanh những tin tức quốc tế">
 
     <!-- Bootstrap -->
     	<!-- Latest compiled and minified CSS -->
@@ -108,9 +108,9 @@
 	  <section class="background-banner text-center Vietnam-banner" id="top">
 
 		<div id="banner-text">
-			<h1 class="display-4">Việt Nam – Đi Gõ Đầu Trẻ Ở Trường Đồi Có Gì Vui Vậy?</h1>
+			<h1 class="display-4">Tờ Báo – Trên thế giới xảy ra chuyện gì rồi nhỉ?</h1>
        		<p class="lead text-center">
-				Lúc đọc báo viết về Trường Đồi, hai mắt mình sáng rực lên vì không tin nổi là ở Việt Nam lại có mô hình học tập tiên tiến và khai phóng đến thế, nó như giữ lại cho mình chút niềm tin về ở đâu đó trên đất nước này có những người dám nghĩ dám làm. Lại một lần nữa, mình chia tay Sài Gòn bằng một cơn mưa rào cuối thu, lòng hướng về Hà Nội với nhiều ấp ủ.
+				Quanh ta đang xảy ra chuyện gì nhỉ? Mình cũng không rõ nữa, vậy đọc cùng mình nhỉ?
 			</p>
 		</div>
 		
