--- a/Myanmar.html
+++ b/Myanmar.html
@@ -89,6 +89,10 @@
                 </div>
              </li>
 -->
+			  <!--			  Headnews Button-->
+			  <li class="nav-item">
+                <a class="nav-link active" href="#">Tờ Báo</a>
+             </li>
 <!--             Disabled Menu-->
 			 <li class="nav-item">
                 <a class="nav-link disabled" href="#">Sắp Ra Mắt</a>
