--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                    <h3>Hà Nội</h3>
                    <ul class="list-unstyled">
 						<li>Quận Đống Đa</li>
-				   		<li>dminhphan96@gmail.com</li>
+				   		<li>minhducphan096@gmail.com</li>
 				   		<li>+84 (0) 906 634 094</li>
 					</ul>
                    <button type="button" class="btn btn-info btn-md">Nhắn Zalo cho mình</button>
