Update Favicon in the Nav Bar
adding a favicon

--- a/India.html
+++ b/India.html
@@ -43,7 +43,10 @@
     
 	  <!--	  Navigation Bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="nav-bar">
-       <a class="navbar-brand" href="https://dminhphan.github.io/index" alt="Cậu Nhỏ ở Hà Nội">Cậu Nhỏ ở Hà Nội</a>
+       <a class="navbar-brand" href="https://dminhphan.github.io/" alt="Homepage">
+		   <img src="images/Favicon-Demo.png" width="35" height="35" alt="Favicon">
+		   <h5 class="d-inline align-middle">Cậu Nhỏ ở Hà Nội</h5>
+		</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
        </button>
