--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
 
   <body>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZGJS5J"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZGJS5J" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <!--	  Navigation Bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="nav-bar">
-       <a class="navbar-brand" href="https://dminhphan.github.io/Project4#H2-Hanoi" alt="Cậu Nhỏ ở Hà Nội">Cậu Nhỏ ở Hà Nội</a>
+       <a class="navbar-brand" href="https://dminhphan.github.io/" alt="Homepage">
+		   <img src="images/Favicon-Demo.png" width="35" height="35" alt="Favicon">
+		   <h5 class="d-inline align-middle">Cậu Nhỏ ở Hà Nội</h5>
+		</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
        </button>
