update main english

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="nav-bar">
 		<a class="navbar-brand" href="https://dminhphan.github.io/" alt="Homepage">
 			<img src="images/Favicon-Demo.png" width="35" height="35" alt="Favicon">
-			<h5 class="d-inline align-middle">Cậu Nhỏ ở Hà Nội</h5>
+			<h5 class="d-inline align-middle">Le Petit Boi in Hanoi</h5>
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -123,7 +123,7 @@
 
 		<div id="banner-text">
 			<h1 class="display-4">Stepping Into Hanoi with Luggage Packed Full of Saigon</h1>
-			<p class="lead">Chỉ là một Cậu Nhỏ Sài Gòn mãi không chịu lớn dù có đi đâu, ngay cả ở Hà Nội.</p>
+			<p class="lead">He is just a little Saigon boy who refuses to grow up no matter where he goes, even in Hanoi.</p>
 			<p class="lead align-content-center">
 				<a class="btn btn-info btn-lg smooth-scroll" href="#H2-Saigon" role="button">Saigon Window</a>
 				<a class="btn btn-info btn-lg smooth-scroll" href="#H2-Hanoi" role="button">Hanoi Corner</a>
