--- a/Myanmar.html
+++ b/Myanmar.html
@@ -42,30 +42,31 @@
 			<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZGJS5J"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
     
-	  <!--	  Navigation Bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="nav-bar">
-       <a class="navbar-brand" href="https://dminhphan.github.io/" alt="Homepage">
-		   <img src="images/Favicon-Demo.png" width="35" height="35" alt="Favicon">
-		   <h5 class="d-inline align-middle">Cậu Nhỏ ở Hà Nội</h5>
-		</a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-       <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto justify-content-center">
+<!--	  Navigation Bar-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="nav-bar">
+	<a class="navbar-brand" href="https://dminhphan.github.io/" alt="Homepage">
+		<img src="images/Favicon-Demo.png" width="35" height="35" alt="Favicon">
+		<h5 class="d-inline align-middle">Le Petit Boi in Hanoi</h5>
+	</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+	<ul class="navbar-nav mr-auto justify-content-center">
 <!--             Journey-->
-			 <li class="nav-item dropdown active">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Đôi Giày<span class="sr-only">(current)</span>
-				</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                   <a class="dropdown-item" href="https://dminhphan.github.io/Thailand">Thái Lan</a>
-                   <a class="dropdown-item" href="https://dminhphan.github.io/Myanmar">Miến Điện</a>
-					<a class="dropdown-item" href="https://dminhphan.github.io/India">Ấn Độ</a>
-                   <div class="dropdown-divider"></div>
-                   <a class="dropdown-item" href="https://dminhphan.github.io/Vietnam">Việt Nam</a>
-                </div>
-             </li>
+		<li class="nav-item dropdown active">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
+				data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				The Shoes<span class="sr-only">(current)</span>
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+				<a class="dropdown-item" href="https://dminhphan.github.io/Thailand">Thailand</a>
+				<a class="dropdown-item" href="https://dminhphan.github.io/Myanmar">Myanmar</a>
+				<a class="dropdown-item" href="https://dminhphan.github.io/India">India</a>
+				<div class="dropdown-divider"></div>
+				<a class="dropdown-item" href="https://dminhphan.github.io/Vietnam">Vietnam</a>
+			</div>
+		</li>
 <!--			 My Work-->
 <!--
              <li class="nav-item dropdown active">
