--- a/Vietnam.html
+++ b/Vietnam.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Việt Nam – Đi Gõ Đầu Trẻ Ở Trường Đồi Có Gì Vui Vậy?</title>
+    <title>Le Petit Boi in Hanoi | Việt Nam – Đi Gõ Đầu Trẻ Ở Trường Đồi Có Gì Vui Vậy?</title>
   	<link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png">
 	  
 	  <meta name="keywords" 
