--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- End Google Tag Manager -->
 
 	<link rel="stylesheet" type="text/css" href="Project4.css">
-    <title>Le Petit Boi in Hanoi</title>
+    <title>Le Petit Boi in Hanoi | Homepage</title>
 	<link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png">
 
     <!-- Bootstrap -->
