--- a/India.html
+++ b/India.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ấn Độ - Đến Bồ Đề Đạo Tràng Mà Không Sùng Đạo</title>
+    <title>Le Petit Boi in Hanoi | Ấn Độ - Đến Bồ Đề Đạo Tràng Mà Không Sùng Đạo</title>
  	<link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png">
 	  
 	  <meta name="keywords" 
