--- a/Myanmar.html
+++ b/Myanmar.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Miến Điện – Bệnh Viện Miễn Phí ở Yangon </title>
+    <title>Le Petit Boi in Hanoi | Miến Điện – Bệnh Viện Miễn Phí ở Yangon </title>
   	<link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png">
 
 	  
