--- a/Thailand.html
+++ b/Thailand.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Receiving More Than Giving in Thailand</title>
+    <title>Le Petit Boi in Hanoi | Receiving More Than Giving in Thailand</title>
 	<link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png">
 		
 		<meta name="keywords" 
