done english translate

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 		<div class="row jumbotron jumbotron-fluid">
 			<div class="text-center col-lg-12 col-md-12 col-sm-12 col-12">
 				<h4>Le Petit Boi in Hanoi</h4>
-				<p>Copyright &copy; 2021 &middot; All Rights Reserved &middot; <a href="#top" alt="Cậu Nhỏ ở Sài Gòn">Back to the Top</a></p>
+				<p>Copyright &copy; 2021 &middot; All Rights Reserved &middot; <a href="#top" alt="Le Petit Boi in Hanoi">Back to the Top</a></p>
 			</div>
 		</div>
 		</div>
