--- a/India.html
+++ b/India.html
@@ -116,7 +116,7 @@
 		<section class="background-banner text-center India-banner" id="top">
 
 		<div id="banner-text">
-			<h1 class="display-4">India - Coming To Bodh Gaya Without Any Religious Believe</h1>
+			<h1 class="display-4">India - Coming To Bodh Gaya Without Any Religious Belief</h1>
 			<p class="lead text-center">
 				Because I didn't need to have that to serve the community while doing my volunteer 
 				work at the Sanghamitra Institute of Jamyang Foundation!
