--- a/India.html
+++ b/India.html
@@ -358,7 +358,7 @@
 					<h4><em>Next Post</em></h4>
 					<h3 class="card-title"><strong>What's so fun about giving lessons at Spring Hill School?</strong></h3>
 					
-					<p class="text-justify card-text">A little experience when teaching at Doi School, 40km west of Hanoi, 
+					<p class="text-justify card-text">A little experience when teaching at Spring Hill School, 40km west of Hanoi, 
 						a new model of education, I had high hopes and disappointments. Still, everything passed, 
 						but the teacher-student relationship stayed, and I cherish my time at school; that's the most
 						important thing. Hopefully, there will be a small hill to lead children up to explore plants 
