--- a/Vietnam.html
+++ b/Vietnam.html
@@ -114,7 +114,7 @@
 		<section class="background-banner text-center Vietnam-banner" id="top">
 
 		<div id="banner-text">
-			<h1 class="display-4">Vietnam – What's so fun about Giving Lessons at Spring Hill School?</h1>
+			<h1 class="display-4">What's so fun about Giving Lessons at Spring Hill School?</h1>
 			<p class="lead text-center">
 				When I read the newspaper about Spring Hill, it was a striking moment because I couldn't believe there 
 				was such an advanced and liberal learning model in Vietnam. Once again, I bid farewell to Saigon with a 
