--- a/Thailand.html
+++ b/Thailand.html
@@ -154,13 +154,13 @@
 				<p class="text-justify">
 					Stepping into the monastery, I was nervous, I didn't know anyone in Asoke, 
 					and when I asked, I knew that my friends had returned to Vietnam long ago. 
-					Suffering has been my shy personality since I was a child, the kind of strange country unfamiliar to me.
+					Suffering has been my shy personality since I was a child due to the unfamiliar environment.
 					<br><br>
 					“Shall I go back to Bangkok now? Warm blankets and soft mattresses, humming air conditioners, 
 					it's just extreme here,” those were the things in my mind then. "No, I’ve already come so far, 
 					I couldn’t leave anymore." So, I went in and asked if I could stay at the monastery for one day, just one day. 
 					That's the story of a trip to attend a Scientific Research Conference in Bangkok that the school sponsored 
-					(well, we don't have money to think about spending money just going out).
+					(well, we did't have money to think about traveling abroad then).
 					<br><br>
 					LoungPo Daodin taught me (in Thailand for a while, I later learned that "LuongPo" means "teacher" in Thai, 
 					please allow me to use "LoungPo" from now on.) to get acquainted. He helped me a lot during my time at Pathom Asoke. 
@@ -290,7 +290,7 @@
 					<div class="carousel-item">
 						<img class="card-img-top img-fluid rounded" src="images/Thailand/Thailand5.jpg" alt="The fish lake in Pathom Asoke, far away, is the soy sauce factory, a very peaceful corner every afternoon in Asoke.">
 						<div class="card-body-portrait">
-							<h5 class="card-title">The fish lake in Pathom Asoke, far away, is the soy sauce factory, a very peaceful corner every afternoon in Asoke.</h5>							
+							<h5 class="card-title">The fish lake in Pathom Asoke, far away, is the soya sauce factory, a very peaceful corner every afternoon in Asoke.</h5>							
 							<br>							
 						</div>
 					</div>
