--- a/Vietnam.html
+++ b/Vietnam.html
@@ -55,7 +55,7 @@
 		<li class="nav-item dropdown active">
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
 				data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				The Shoes<span class="sr-only">(current)</span>
+				My Footsteps<span class="sr-only">(current)</span>
 			</a>
 			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 				<a class="dropdown-item" href="https://dminhphan.github.io/Thailand">Thailand</a>
@@ -131,7 +131,7 @@
 		<div class="row">
 <!--          Left Section-->
 			<div class=" col-lg-8 col-md-8 col-sm-12 col-12"> 
-				<h2 class="text-center">Teach Children to Feel My Inner Child</h2>
+				<h2 class="text-center">Teach Children to Teach My Inner Child Instead</h2>
 				<br>
 				<h5 class="text-justify"><em>That might be my biggest confession of being a more knowledgeable grownup 
 					to teach children. What to do when the children disobey? Or when they left leftovers? Or not sharing 
