--- a/Thailand.html
+++ b/Thailand.html
@@ -59,7 +59,7 @@
 			<li class="nav-item dropdown active">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
 					data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					The Shoes<span class="sr-only">(current)</span>
+					My Footsteps<span class="sr-only">(current)</span>
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<a class="dropdown-item" href="https://dminhphan.github.io/Thailand">Thailand</a>
